--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 CFA-P-results.rar filter=lfs diff=lfs merge=lfs -text
 SDC11276.MP4 filter=lfs diff=lfs merge=lfs -text
+SDC11281.MP4 filter=lfs diff=lfs merge=lfs -text
